--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -71,6 +71,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
             android:text="Register" />
+        <Button
+            android:id="@+id/buttonLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="36dp"
+            android:text="Go back to Login" />
 
     </LinearLayout>
 </ScrollView>
